  - Add more symbol lookups to disasm methods

- I/O Devices
  - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
    per model are supported. Use the zero-based "card" parameter to specify device.
  - VGA: Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
    to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.

-------------------------------------------------------------------------
Changes in 2.6.11 (January 5, 2020):

- General
  - Added 64-bit support to the NSIS installer script
  - Several fixes in the build system based on Debian patches

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness
    - Many critical bugfixes for Protection Keys, AVX512*, VMX/SVM, SHA, GFNI emulation
  ! Implemented CET (Control Flow Enforcement Technology) emulation according to Intel SDM rev071

- I/O Devices
  - Added missing Cirrus SVGA bitblt feature "transparent color compare"
  - Some fixes in HPET emulation (patch by Oleg)
  - Fixed disk image lock mechanism in the USB MSD case

- BIOS / VGABIOS
  - LGPL'd VGABIOS updated to version 0.7b (Fixed VESA extension 'read EDID'
    for Bochs VBE and Cirrus)
  - Updated SeaBIOS ROM image to current version 1.13.0
  - Added SeaVGABIOS ROM image for the Cirrus adapter
  - Bochs BIOS built to work with CPU level 5 again

-------------------------------------------------------------------------
Changes in 2.6.10 (December 1, 2019):

Brief summary :
  - CPU: Bugfixes for CPU emulation correctness (critical bugfixes for PCID, ADCX/ADOX, MOVBE, AVX/AVX-512 and VMX emulation)
  - CPU: implemented AVX-512 VBMI2/VNNI/BITALG, VAES, VPCLMULQDQ / GFNI instructions emulation
  - VMX: Implement EPT-Based Sub-Page Protection
  - CPUID: Added new CPU models Skylake-X, Cannonlake and Icelake-U
  - CPUID: Implemented side-channel attack prevention reporting and corresponding MSR registers, enabled for Icelake-U
  - Added basic support for the i440BX PCI/AGP chipset.